--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
-mypy = "^0.961"
 black = "^22.6.0"
 isort = "^5.10.1"
+flake8 = "^5.0.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[flake8]
+max-line-length = 100
