--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [tool.poetry]
-name = "astcom"
-version = "0.1.0"
+name = "ast-comments"
+version = "0.1.1"
 description = ""
+readme = "README.md"
+repository = "https://github.com/t3rn0/ast-comments"
+homepage = "https://github.com/t3rn0/ast-comments"
 authors = ["Dmitry Makarov <dmtern0vnik@gmail.com>"]
 
 [tool.poetry.dependencies]
