--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytest = "^7.1.2"
 black = "^22.6.0"
 isort = "^5.10.1"
 flake8 = "^5.0.3"
+flake8-print = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
