--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [tool.poetry]
 name = "ast-comments"
-version = "1.2.0"
+version = "1.2.1"
 description = ""
+license = "MIT"
 readme = "README.md"
 repository = "https://github.com/t3rn0/ast-comments"
 homepage = "https://github.com/t3rn0/ast-comments"
